# BigdataCert

./: .gitignore  CLAUDE.md  Makefile  README.md  package-lock.json
.claude/: settings.json
.claude/agents/: backend-engineer.md  content-author.md  frontend-engineer.md  infra-engineer.md  qa-integration.md
.claude/hooks/: auto-snapshot.sh
.claude/skills/bigdata-content-creation/: SKILL.md
.claude/skills/bigdata-content-creation/references/: grading-contract.md  type1-preprocessing.md  type2-modeling.md  type3-statistics.md  written-theory.md
.claude/skills/bigdata-prep-orchestrator/: SKILL.md
.claude/skills/nextjs-codingpad-patterns/: SKILL.md
.claude/skills/python-sandbox-execution/: SKILL.md
.claude/skills/python-sandbox-execution/references/: graders.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  content_loader.py  deps.py  main.py  openapi_dump.py  security.py
backend/app/api/: auth.py  me.py  problems.py  submissions.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/grading/: __init__.py  base.py  choice_grader.py  csv_grader.py  dict_grader.py  scalar.py
backend/app/sandbox/: __init__.py  runner.py  static_check.py
backend/app/schemas/: problem.py
backend/tests/: conftest.py  test_auth.py  test_google_auth.py  test_grading.py  test_grading_extended.py  test_notes.py  test_persistence.py  test_sandbox.py  test_smoke.py
content/data/pp1-groupby-001/: data.csv
content/data/pp1-iqr-001/: data.csv
content/data/pp1-missing-001/: data.csv
content/data/pp1-quantile-001/: data.csv
content/data/pp2-churn-001/: test.csv  train.csv  truth.csv
content/data/pp2-housing-001/: test.csv  train.csv  truth.csv
content/data/pp2-imbalanced-001/: test.csv  train.csv  truth.csv
content/data/pp2-multi-001/: test.csv  train.csv  truth.csv
content/data/pp3-anova-001/: data.csv
content/data/pp3-chi2-001/: data.csv
content/data/pp3-corr-001/: data.csv
content/data/pp3-ttest-001/: data.csv
content/problems/practical_1/: pp1-groupby-001.json  pp1-iqr-001.json  pp1-missing-001.json  pp1-quantile-001.json
content/problems/practical_2/: pp2-churn-001.json  pp2-housing-001.json  pp2-imbalanced-001.json  pp2-multi-001.json
content/problems/practical_3/: pp3-anova-001.json  pp3-chi2-001.json  pp3-corr-001.json  pp3-ttest-001.json
content/problems/written/: w-eda-001.json  w-ensemble-001.json  w-metrics-001.json  w-pvalue-001.json
frontend/: .env.example  README.md  auth.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/sign-in/: page.tsx
frontend/app/auth/sign-up/: page.tsx
frontend/app/me/: page.tsx
frontend/app/me/notes/: page.tsx
frontend/app/problems/: page.tsx
frontend/app/problems/[id]/: page.tsx
frontend/app/problems/[id]/_components/: code-editor.tsx  (+3 more)
frontend/components/: header.tsx  providers.tsx
frontend/lib/: api.ts  auth-context.tsx  utils.ts
