[project]
name = "bigdata-prep-backend"
version = "0.1.0"
description = "빅데이터분석기사 실기 연습 사이트 — 백엔드"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    # DB + Auth
    "sqlalchemy>=2.0.30",
    "passlib[bcrypt]>=1.7.4",
    # passlib 1.7.4 가 bcrypt 4.x 의 메타데이터 변경과 비호환 (AttributeError: __about__)
    # → 호환되는 3.x 로 핀. https://github.com/pyca/bcrypt/issues/684
    "bcrypt<4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "google-auth>=2.36.0",
    "requests>=2.32.0",
    # 샌드박스 실행 시 학습자 코드가 사용할 도메인 라이브러리.
    # 백엔드 venv 의 sys.executable 을 그대로 sandbox subprocess 가 호출하므로
    # 여기 설치된 패키지가 학습자 코드에 노출됨.
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
